force-app/main/default/objects/BuildingProject__c/BuildingProject__c.object-meta.xml
<CustomObject>
    <label>Bauvorhaben</label>
    <nameField>
        <label>Building Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bauvorhaben</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>