force-app/main/default/objects/BuildingProject__c/fields/AdditionalAddressInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAddressInformation__c</fullName>
    <label>Additional Address Information</label>
    <type>TextArea</type>
</CustomField>