force-app/main/default/objects/BuildingProject__c/fields/Allocationfabricator__c.field-meta.xml
<CustomField>
    <fullName>Allocationfabricator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation fabricator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fabricator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Building Project</relationshipLabel>
    <relationshipName>Building_Project</relationshipName>
    <type>Lookup</type>
</CustomField>