force-app/main/default/objects/BuildingProject__c/fields/Allocationsystemhouse__c.field-meta.xml
<CustomField>
    <fullName>Allocationsystemhouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation system house</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Wettbewerber</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Building Project (Allocation System house)</relationshipLabel>
    <relationshipName>Building_Project1</relationshipName>
    <type>Lookup</type>
</CustomField>