force-app/main/default/objects/BuildingProject__c/fields/AwardCountdown__c.field-meta.xml
<CustomField>
    <fullName>AwardCountdown__c</fullName>
    <formula>AwardDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Countdown (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>