force-app/main/default/objects/BuildingProject__c/fields/AwardDate__c.field-meta.xml
<CustomField>
    <fullName>AwardDate__c</fullName>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>