force-app/main/default/objects/BuildingProject__c/fields/BidderListSent__c.field-meta.xml
<CustomField>
    <fullName>BidderListSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bidder list sent</label>
    <type>Checkbox</type>
</CustomField>