force-app/main/default/objects/BuildingProject__c/fields/BP_has_Orders__c.field-meta.xml
<CustomField>
    <fullName>BP_has_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BP has Orders</label>
    <type>Checkbox</type>
</CustomField>