force-app/main/default/objects/BuildingProject__c/fields/BuildingType__c.field-meta.xml
<CustomField>
    <fullName>BuildingType__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Culture</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Habitation</fullName>
            </value>
            <value>
                <fullName>Industrial and trade</fullName>
            </value>
            <value>
                <fullName>Office and administration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>care and health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>