force-app/main/default/objects/BuildingProject__c/fields/ComarchBuildingProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ComarchBuildingProjectNumber__c</fullName>
    <externalId>true</externalId>
    <label>Comarch Building Project Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>