force-app/main/default/objects/BuildingProject__c/fields/ComarchSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>ComarchSyncStatus__c</fullName>
    <label>Comarch Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>