force-app/main/default/objects/BuildingProject__c/fields/ConstructionDuration__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDuration__c</fullName>
    <label>Construction Duration (in weeks)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>