force-app/main/default/objects/BuildingProject__c/fields/ConstructionDurationFormula__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDurationFormula__c</fullName>
    <formula>(ConstructionEndPlanned__c - ConstructionStart__c) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Duration (in weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>