force-app/main/default/objects/BuildingProject__c/fields/ConstructionEndPlanned__c.field-meta.xml
<CustomField>
    <fullName>ConstructionEndPlanned__c</fullName>
    <label>Construction End Planned</label>
    <type>Date</type>
</CustomField>