force-app/main/default/objects/BuildingProject__c/fields/ConstructionStart__c.field-meta.xml
<CustomField>
    <fullName>ConstructionStart__c</fullName>
    <label>Construction Start</label>
    <type>Date</type>
</CustomField>