force-app/main/default/objects/BuildingProject__c/fields/DateOfServiceSpecification__c.field-meta.xml
<CustomField>
    <fullName>DateOfServiceSpecification__c</fullName>
    <label>Date of Service Specification (est.)</label>
    <type>Date</type>
</CustomField>