force-app/main/default/objects/BuildingProject__c/fields/DateofServiceSpecificationCountdown__c.field-meta.xml
<CustomField>
    <fullName>DateofServiceSpecificationCountdown__c</fullName>
    <formula>DateOfServiceSpecification__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Service Specification Countdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>