force-app/main/default/objects/BuildingProject__c/fields/DuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCheck__c</fullName>
    <description>Necessary for duplicate check on name</description>
    <label>Duplicate Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>