force-app/main/default/objects/BuildingProject__c/fields/DuplicateCity__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCity__c</fullName>
    <description>Duplicate check for City</description>
    <label>Duplicate City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>