force-app/main/default/objects/BuildingProject__c/fields/DuplicateName__c.field-meta.xml
<CustomField>
    <fullName>DuplicateName__c</fullName>
    <description>For Duplicate Check on Name</description>
    <label>Duplicate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>