force-app/main/default/objects/BuildingProject__c/fields/DuplicateStreet__c.field-meta.xml
<CustomField>
    <fullName>DuplicateStreet__c</fullName>
    <description>Duplicate check for Street</description>
    <label>Duplicate Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>