force-app/main/default/objects/BuildingProject__c/fields/DuplicateZIP__c.field-meta.xml
<CustomField>
    <fullName>DuplicateZIP__c</fullName>
    <description>Duplicate check for ZIP</description>
    <label>Duplicate ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>