force-app/main/default/objects/BuildingProject__c/fields/enaioId__c.field-meta.xml
<CustomField>
    <fullName>enaioId__c</fullName>
    <label>enaio Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>