force-app/main/default/objects/BuildingProject__c/fields/ExternalNote__c.field-meta.xml
<CustomField>
    <fullName>ExternalNote__c</fullName>
    <label>External Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>