force-app/main/default/objects/BuildingProject__c/fields/Focus_topic__c.field-meta.xml
<CustomField>
    <fullName>Focus_topic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus topic</label>
    <type>Checkbox</type>
</CustomField>