force-app/main/default/objects/BuildingProject__c/fields/Has_team__c.field-meta.xml
<CustomField>
    <fullName>Has_team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there a Building Project Team associated with the Bauvorhaben?</description>
    <label>Has team</label>
    <type>Checkbox</type>
</CustomField>