force-app/main/default/objects/BuildingProject__c/fields/InitialComarchSync__c.field-meta.xml
<CustomField>
    <fullName>InitialComarchSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InitialComarchSync</label>
    <type>Checkbox</type>
</CustomField>