force-app/main/default/objects/BuildingProject__c/fields/InternalNote__c.field-meta.xml
<CustomField>
    <fullName>InternalNote__c</fullName>
    <label>Internal Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>