force-app/main/default/objects/BuildingProject__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architekturwettbewerb</fullName>
            </value>
            <value>
                <fullName>Construction site</fullName>
            </value>
            <value>
                <fullName>DOCUmedia</fullName>
            </value>
            <value>
                <fullName>Documedia CH</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>iBau</fullName>
            </value>
            <value>
                <fullName>Own research</fullName>
            </value>
            <value>
                <fullName>Personal network</fullName>
            </value>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>SIMAP</fullName>
            </value>
            <value>
                <fullName>TED</fullName>
            </value>
            <value>
                <fullName>Vergabe24</fullName>
            </value>
            <value>
                <fullName>vip Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>