force-app/main/default/objects/BuildingProject__c/fields/NonDisclosureAgreement__c.field-meta.xml
<CustomField>
    <fullName>NonDisclosureAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Disclosure Agreement</label>
    <type>Checkbox</type>
</CustomField>