force-app/main/default/objects/BuildingProject__c/fields/OrderEntry__c.field-meta.xml
<CustomField>
    <fullName>OrderEntry__c</fullName>
    <label>Order Entry</label>
    <type>Date</type>
</CustomField>