force-app/main/default/objects/BuildingProject__c/fields/Postal_Code_City__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_City__c</fullName>
    <formula>ProjectAddress__PostalCode__s &amp; &quot; &quot; &amp;ProjectAddress__City__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code, City</label>
    <type>Text</type>
</CustomField>