force-app/main/default/objects/BuildingProject__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>Dieses Feld speichert den Status des Building Projects, bevor es auf Execution gesetzt wird, weil eine Opportunity auf Closed Won gesetzt wurde</description>
    <label>Previous Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>