force-app/main/default/objects/BuildingProject__c/fields/ProjectAddress__c.field-meta.xml
<CustomField>
    <fullName>ProjectAddress__c</fullName>
    <label>Project Address</label>
    <type>Address</type>
</CustomField>