force-app/main/default/objects/BuildingProject__c/fields/ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <label>Project ID</label>
    <type>TextArea</type>
</CustomField>