force-app/main/default/objects/BuildingProject__c/fields/ProjectPreview__c.field-meta.xml
<CustomField>
    <fullName>ProjectPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project preview</label>
    <type>Checkbox</type>
</CustomField>