force-app/main/default/objects/BuildingProject__c/fields/ProjectPriority__c.field-meta.xml
<CustomField>
    <fullName>ProjectPriority__c</fullName>
    <label>Project Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Project</fullName>
            </value>
            <value>
                <fullName>Prio A</fullName>
            </value>
            <value>
                <fullName>Prio B</fullName>
            </value>
            <value>
                <fullName>Prio C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>