force-app/main/default/objects/BuildingProject__c/fields/ProjectSupported__c.field-meta.xml
<CustomField>
    <fullName>ProjectSupported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project supported</label>
    <type>Checkbox</type>
</CustomField>