force-app/main/default/objects/BuildingProject__c/fields/RAICOSpecification__c.field-meta.xml
<CustomField>
    <fullName>RAICOSpecification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAICO specification</label>
    <type>Checkbox</type>
</CustomField>