force-app/main/default/objects/BuildingProject__c/fields/Reasons_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_cancellation__c</fullName>
    <description>if a building project was closed because it was lost, the reasons for the loss needs to be provided.</description>
    <label>Reasons for cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closing_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project will not be executed</fullName>
            </value>
            <value>
                <fullName>RAICO (Technical solution)</fullName>
            </value>
            <value>
                <fullName>RAICO (Price)</fullName>
            </value>
            <value>
                <fullName>RAICO (Time)</fullName>
            </value>
            <value>
                <fullName>Delivery time</fullName>
                <isActive>false</isActive>
                <label>Delivery time</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
            <value>
                <fullName>System requirements</fullName>
                <isActive>false</isActive>
                <label>System requirements</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>