force-app/main/default/objects/BuildingProject__c/fields/Search_Address__c.field-meta.xml
<CustomField>
    <fullName>Search_Address__c</fullName>
    <label>Project Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>