force-app/main/default/objects/BuildingProject__c/fields/Service_specifications_sent__c.field-meta.xml
<CustomField>
    <fullName>Service_specifications_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service specifications sent</label>
    <type>Checkbox</type>
</CustomField>