force-app/main/default/objects/BuildingProject__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
                <default>true</default>
                <label>Research</label>
            </value>
            <value>
                <fullName>Consulting/ Planning</fullName>
            </value>
            <value>
                <fullName>Tender &amp; Quote</fullName>
            </value>
            <value>
                <fullName>Award Fabricator</fullName>
            </value>
            <value>
                <fullName>Award System house</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Award</fullName>
                <isActive>false</isActive>
                <label>Award</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>