force-app/main/default/objects/BuildingProject__c/fields/Status_Update_Id__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Id__c</fullName>
    <label>Status Update Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>