force-app/main/default/objects/BuildingProject__c/fields/SubmissionCountdown__c.field-meta.xml
<CustomField>
    <fullName>SubmissionCountdown__c</fullName>
    <formula>SubmissionDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Countdown (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>