force-app/main/default/objects/BuildingProject__c/fields/Total_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_Size__c</fullName>
    <label>Total Size</label>
    <summarizedField>Systems__c.SystemSize__c</summarizedField>
    <summaryFilterItems>
        <field>Systems__c.SystemUnit__c</field>
        <operation>equals</operation>
        <value>qm</value>
    </summaryFilterItems>
    <summaryForeignKey>Systems__c.BuildingProjectSystem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>