force-app/main/default/objects/BuildingProject__c/fields/TotalSize__c.field-meta.xml
<CustomField>
    <fullName>TotalSize__c</fullName>
    <label>Total Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>