force-app/main/default/objects/BuildingProject__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>New construction</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>