force-app/main/default/objects/BuildingProject__c/fields/utilBPPDFVisibility__c.field-meta.xml
<CustomField>
    <fullName>utilBPPDFVisibility__c</fullName>
    <formula>$User.Id =  OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>utilBPPDFVisibility</label>
    <type>Checkbox</type>
</CustomField>