force-app/main/default/objects/BuildingProject__c/validationRules/AddressRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AddressRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ProjectAddress__Street__s)||ISBLANK(ProjectAddress__City__s)||ISBLANK(ProjectAddress__PostalCode__s)</errorConditionFormula>
    <errorMessage>Please enter an Address!</errorMessage>
</ValidationRule>