force-app/main/default/objects/BuildingProject__c/validationRules/ExternalNoteLengthPDF.validationRule-meta.xml
<ValidationRule>
    <fullName>ExternalNoteLengthPDF</fullName>
    <active>true</active>
    <description>Externe Bemerkung soll auf dem Bauvorhaben PDF limitiert sein, damit alle</description>
    <errorConditionFormula>LEN(ExternalNote__c)&gt;134</errorConditionFormula>
    <errorDisplayField>ExternalNote__c</errorDisplayField>
    <errorMessage>The character limit has been exceeded.</errorMessage>
</ValidationRule>