force-app/main/default/objects/BuildingProject__c/validationRules/NameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLength</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name)  &gt; 48</errorConditionFormula>
    <errorMessage>The building project name or city name is too long.</errorMessage>
</ValidationRule>