force-app/main/default/objects/BuildingProject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Postal_Code_City__c</columns>
    <columns>ComarchBuildingProjectNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>SubmissionDate__c</columns>
    <columns>TenderType__c</columns>
    <columns>Amount__c</columns>
    <columns>Total_Size__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Probability__c</columns>
    <columns>DateOfServiceSpecification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Focus_topic__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Alle</label>
</ListView>