force-app/main/default/objects/BuildingProject__c/listViews/Recently_viewed_RAICO_UK.listView-meta.xml
<ListView>
    <fullName>Recently_viewed_RAICO_UK</fullName>
    <columns>NAME</columns>
    <columns>Postal_Code_City__c</columns>
    <columns>ComarchBuildingProjectNumber__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Recently viewed RAICO UK</label>
    <sharedTo>
        <role>SalesUK</role>
    </sharedTo>
</ListView>